Update Gitlab CI to install dev reqs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,11 @@ variables:
   PIPENV_VENV_IN_PROJECT: 1
   PIPENV_IGNORE_VIRTUALENVS: 1
 
+build:
+  stage: build
+  script:
+    - pipenv sync --dev
+
 test:
   stage: test
   script:
