--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,11 @@ variables:
   PIPENV_IGNORE_VIRTUALENVS: 1
 
 before_script:
-    - pipenv sync --dev
+  - pipenv sync --dev
 
 Lint:
-  tags: slow-internet
+  tags:
+    - slow-internet
   stage: test
   script:
     - pipenv run python -m flake8
